--- a/packages/website/src/pages/docs/active-list/frameworks.njk
+++ b/packages/website/src/pages/docs/active-list/frameworks.njk
@@ -30,7 +30,7 @@ renderData:
     </ol>
   </nav>
 
-  <h2 id="react" class="h2 mb-4"><a href="#react">1. In general</a></h2>
+  <h2 id="react" ><a href="#react">1. In general</a></h2>
 
   <p>
     The <a href="/api/core/activelist/" class="underline high">ActiveList</a> 
@@ -51,7 +51,7 @@ renderData:
     results in easier to understand code.
   </p>
 
-  <h2 id="react" class="h2 mb-4"><a href="#react">2. React</a></h2>
+  <h2 id="react" ><a href="#react">2. React</a></h2>
 
   <p>
     When using React you should use the 
@@ -61,7 +61,7 @@ renderData:
     to it.
   </p>
 
-  <h2 id="vue" class="h2 mb-4"><a href="#vue">3. Vue</a></h2>
+  <h2 id="vue" ><a href="#vue">3. Vue</a></h2>
 
   <p>
     In Vue you should use the 
@@ -71,7 +71,7 @@ renderData:
     to it.
   </p>
 
-  <h2 id="angular" class="h2 mb-4"><a href="#angular">4. Angular</a></h2>
+  <h2 id="angular" ><a href="#angular">4. Angular</a></h2>
 
   <p>
     If you are using Angular there is no need to include an extra library.
