--- a/packages/website/src/pages/docs/active-list/tutorial.njk
+++ b/packages/website/src/pages/docs/active-list/tutorial.njk
@@ -42,7 +42,7 @@ renderData:
     </ol>
   </nav>
 
-  <h2 id="introduction" class="h2 mb-4"><a href="#introduction">1. Introduction</a></h2>
+  <h2 id="introduction" ><a href="#introduction">1. Introduction</a></h2>
 
   <p>
     In this tutorial we are going to build a Carousel using vanilla
@@ -68,7 +68,7 @@ renderData:
     up an entire development environment.
   </p>
 
-  <h2 id="files-overview" class="h2 mb-4"><a href="#files-overview">2. Files overview</a></h2>
+  <h2 id="files-overview" ><a href="#files-overview">2. Files overview</a></h2>
 
   <p>
     In the sandbox you will see a couple of files:
@@ -90,7 +90,7 @@ renderData:
     </li>
   </ol>
 
-  <h2 id="goals" class="h2 mb-4"><a href="#goals">3. Goals</a></h2>
+  <h2 id="goals" ><a href="#goals">3. Goals</a></h2>
 
   <p>
     We want our carousel to do the following things:
@@ -114,7 +114,7 @@ renderData:
     </li>
   </ol>
 
-  <h2 id="creating-the-carousel" class="h2 mb-4"><a href="#creating-the-carousel">4. Creating the carousel</a></h2>
+  <h2 id="creating-the-carousel" ><a href="#creating-the-carousel">4. Creating the carousel</a></h2>
 
   <p>
     The slides are contained in a <span class="high">ul</span> HTML element, 
@@ -386,7 +386,7 @@ carousel.contents.forEach((content) => {
     are animations.
   </p>
 
-<h2 id="animation" class="h2 mb-4"><a href="#animation">5. Animation</a></h2>
+<h2 id="animation" ><a href="#animation">5. Animation</a></h2>
 
   <p>
     For the animation we want the old
@@ -479,7 +479,7 @@ function subscriber(carousel) {
     the animations.
   </p>
 
-  <h2 id="polishing-the-behavior" class="h2 mb-4"><a href="#polishing-the-behavior">6. Polishing the behavior</a></h2>
+  <h2 id="polishing-the-behavior" ><a href="#polishing-the-behavior">6. Polishing the behavior</a></h2>
 
   <p>
     One thing that is annoying is that this animation is also triggered
@@ -580,7 +580,7 @@ const config = {
     considered executed by a human.
   </p>
 
-  <h2 id="what-you-have-learned" class="h2 mb-4"><a href="#what-you-have-learned">7. What you have learned</a></h2>
+  <h2 id="what-you-have-learned" ><a href="#what-you-have-learned">7. What you have learned</a></h2>
 
   <ol class="list-decimal m-2 mb-4">
     <li class="ml-8 mb-4">
@@ -609,7 +609,7 @@ const config = {
     </li>
   </ol>
 
-  <h2 id="further-reading" class="h2 mb-4"><a href="#further-reading">8. Further reading</a></h2>
+  <h2 id="further-reading" ><a href="#further-reading">8. Further reading</a></h2>
 
   <ol class="list-decimal m-2 mb-4">
     <li class="ml-8 mb-4">
