--- a/packages/website/src/pages/docs/getting-started/getting-started.njk
+++ b/packages/website/src/pages/docs/getting-started/getting-started.njk
@@ -10,8 +10,24 @@ renderData:
 <article>
   <h1>Getting started</h1>
   <p>
-    Getting started with "uiloos" is one npm / yarn / pnpm install away.
+    Welcome to the getting started HUB of the uiloos documentation.
+    We recommend that you start by reading the 
+    <a class="underline" href="/docs/getting-started/overview/"> Overview</a> page, 
+    to get a feel for what uiloos is and what the use cases are.
   </p>
+
+  <a 
+    class="card" 
+    href="/docs/getting-started/overview/"
+  >
+    <div>
+      <div class="text-normal font-medium mb-1">Overview</div>
+      <div class="text-sm">Get an overview of uiloos, learn what it does, understand the use cases.</div>
+    </div>
+    <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+      <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
+    </svg>
+  </a>
 
   <a 
     class="card" 
@@ -20,6 +36,19 @@ renderData:
     <div>
       <div class="text-normal font-medium mb-1">Installation</div>
       <div class="text-sm">Learn how to install uiloos</div>
+    </div>
+    <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+      <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
+    </svg>
+  </a>
+
+  <a 
+    class="card" 
+    href="/docs/getting-started/activation/"
+  >
+    <div>
+      <div class="text-normal font-medium mb-1">Activation</div>
+      <div class="text-sm">Learn how to activate your uiloos license</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
