--- a/packages/website/src/pages/letters/to-developers.njk
+++ b/packages/website/src/pages/letters/to-developers.njk
@@ -55,7 +55,7 @@ renderData:
 
       <p>
         My goal with this library is to make the common user interface behaviors available in an easy 
-        to use API, backed by a an extensive test suite. I think it crazy that all around the world 
+        to use API, backed by an extensive test suite. I think it crazy that all around the world 
         developers are writing the same logic. I believe that designs should be unique, but the common 
         behaviors should be extracted.
       </p>
