--- a/packages/website/src/_includes/components/docsnav.njk
+++ b/packages/website/src/_includes/components/docsnav.njk
@@ -39,6 +39,14 @@
         >
           <li class="py-1">
             <a 
+              class="hover:underline {% if renderData and renderData.current === 'overview' %} font-bold {% endif %}" 
+              href="/docs/getting-started/overview/"
+            >
+              Overview
+            </a>
+          </li>
+          <li class="py-1">
+            <a 
               class="hover:underline {% if renderData and renderData.current === 'installation' %} font-bold {% endif %}" 
               href="/docs/getting-started/installation/"
             >
@@ -181,6 +189,62 @@
               href="/docs/view-channel/examples/"
             >
               Examples
+            </a>
+          </li>
+        </ul>
+      </li>
+
+      <!-- 1st level -->
+      <li class="py-2" x-data="{ open: {% if renderData and renderData.parent === 'miscellaneous' %} true {% else %} false {% endif %} }">
+        <a
+          class="flex items-center hover:underline"
+          href="#2"
+          @click.prevent="open = !open"
+          aria-haspopup="true"
+          :aria-expanded="open"
+        >
+          <div class="flex items-center grow">
+            <span>Miscellaneous</span>
+          </div>
+          <svg
+            class="w-3 h-3 fill-current text-gray-400 cursor-pointer ml-1 shrink-0"
+            viewBox="0 0 12 12"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M10.28 4.305L5.989 8.598 1.695 4.305A1 1 0 00.28 5.72l5 5a1 1 0 001.414 0l5-5a1 1 0 10-1.414-1.414z"
+            />
+          </svg>
+        </a>
+        <!-- 2nd level -->
+        <ul
+          class="font-normal -mb-1 mt-1 ml-2 pl-5 border-l border-gray-300"
+          :class="{ 'hidden': !open }"
+        >
+          <li class="py-1">
+            <a 
+              class="hover:underline {% if renderData and renderData.current === 'rules' %} font-bold {% endif %}" 
+              href="/docs/miscellaneous/rules/"
+            >
+              Rules
+            </a>
+          </li>
+         
+          <li class="py-1">
+            <a 
+              class="hover:underline {% if renderData and renderData.current === 'typescript' %} font-bold {% endif %}" 
+              href="/docs/miscellaneous/typescript/"
+            >
+              TypeScript
+            </a>
+          </li>
+
+          <li class="py-1">
+            <a 
+              class="hover:underline {% if renderData and renderData.current === 'future' %} font-bold {% endif %}" 
+              href="/docs/miscellaneous/future/"
+            >
+              Future
             </a>
           </li>
         </ul>
