website: added links to dashboard in footer and navigation.

--- a/packages/website/src/_includes/components/footer.njk
+++ b/packages/website/src/_includes/components/footer.njk
@@ -36,6 +36,9 @@
           <li class="mb-2">
             <a class="text-gray-600 dark:text-white hover:text-gray-900 transition duration-150 ease-in-out" href="https://dashboard.uiloos.dev/privacy">Privacy</a>
           </li>
+          <li class="mb-2">
+            <a class="text-gray-600 dark:text-white hover:text-gray-900 transition duration-150 ease-in-out" href="https://dashboard.uiloos.dev">Dashboard</a>
+          </li>
         </ul>
       </div>
 
