--- a/packages/website/src/_includes/components/navigation.njk
+++ b/packages/website/src/_includes/components/navigation.njk
@@ -35,6 +35,14 @@
             </a>
           </li>
         {% endfor %}
+        <li>
+            <a 
+              class="text-black dark:text-white hover:text-purple-600 dark:hover:text-purple-600 px-3 lg:px-5 py-2 flex items-center transition duration-150 ease-in-out" 
+              href="https://dashboard.uiloos.dev"
+            >
+              Dashboard
+            </a>
+          </li>
       </ul>
     </nav>
 
@@ -105,6 +113,14 @@
               </a>
             </li>
           {% endfor %}
+            <li>
+              <a 
+                class="text-black dark:text-white hover:text-purple-600 dark:hover:text-purple-600 flex justify-center text-xl text-gray-700 py-4" 
+                href="https://dashboard.uiloos.dev"
+              >
+                Dashboard
+              </a>
+            </li>
         </ul>
       </nav>
     </div>
