--- a/packages/website/src/pages/docs/typewriter/typewriter.njk
+++ b/packages/website/src/pages/docs/typewriter/typewriter.njk
@@ -1,29 +1,39 @@
 ---
-title: Docs | uiloos
+title: Typewriter | Docs | uiloos
 layout: layouts/docs.njk
-permalink: /docs/
-eleventyNavigation:
-  key: Docs
-  order: 0
+permalink: /docs/typewriter/
 renderData: 
-  description: "The documentation hub page for uiloos."
-  keywords: "uiloos docs, uiloos documentation"
+  description: "The documentation hub page for the ViewChannel component of uiloos."
+  keywords: "uiloos ViewChannel docs, ViewChannel, ViewChannel docs"
 ---
 
 <article>
-  <h1>Docs</h1>
+  <h1>Typewriter</h1>
 
   <p>
-    Welcome to the documentation hub of "uiloos".
+    Welcome to the documentation hub of the Typewriter.
   </p>
 
   <a 
     class="card" 
-    href="/docs/getting-started/installation/"
+    href="/docs/typewriter/concepts/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">Installation</div>
-      <div class="text-sm">Learn how to install and activate uiloos</div>
+      <div class="text-normal font-medium mb-1">Concept</div>
+      <div class="text-sm">Learn the concepts behind the ViewChannel</div>
+    </div>
+    <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+      <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
+    </svg>
+  </a>
+
+   <a 
+    class="card" 
+    href="/docs/typewriter/tutorial/"
+  >
+    <div>
+      <div class="text-normal font-medium mb-1">Tutorial</div>
+      <div class="text-sm">Take the tutorial and build a notification center</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
@@ -32,11 +42,11 @@ renderData:
 
   <a 
     class="card" 
-    href="/docs/active-list/"
+    href="/docs/typewriter/usage-with-frameworks/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">ActiveList</div>
-      <div class="text-sm">The ActiveList can be used to create components such as: carousels, accordions, segmented buttons and tabs.</div>
+      <div class="text-normal font-medium mb-1">Usage with Frameworks</div>
+      <div class="text-sm">Learn how to use the ViewChannel in combination with frameworks such as React, Vue and Angular</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
@@ -45,27 +55,15 @@ renderData:
 
   <a 
     class="card" 
-    href="/docs/view-channel/"
+    href="/docs/typewriter/examples/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">ViewChannel</div>
-      <div class="text-sm">The ViewChannel can be used to create components such as: flash messages, notification centers, modals and confirmation dialogs.</div>
+      <div class="text-normal font-medium mb-1">Examples</div>
+      <div class="text-sm">View some examples of the ViewChannel in action</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
     </svg>
   </a>
 
-  <a 
-    class="card" 
-    href="/docs/typewriter/"
-  >
-    <div>
-      <div class="text-normal font-medium mb-1">Typewriter</div>
-      <div class="text-sm">The Typewriter can be used to create typewriter animations.</div>
-    </div>
-    <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-      <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
-    </svg>
-  </a>
 </article>
