--- a/packages/website/src/styles/main.scss
+++ b/packages/website/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import 'additional-styles/utility-patterns.scss';
 @import 'additional-styles/theme.scss';
 @import 'additional-styles/prism.scss';
+@import 'additional-styles/typewriter.scss';
 
 @tailwind utilities;
 
